fixing layout issue and adding routing module

--- a/src/styles/base/_base.scss
+++ b/src/styles/base/_base.scss
@@ -13,3 +13,7 @@ html {
 body {
     box-sizing: border-box;
 }
+
+html, body {
+  height: 100%;
+}
